<resources>
    <string name="app_name">Tevio Delivery</string>
    <string name="google_map_key">AIzaSyBmZPPiryI9sLofgVLseOE3VwoKW_AdoUo</string>
    <string name="allowed_chars_insurance">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="allowed_chars_name">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="provider_authority_suffix">suffix</string>
    <string name="internet_ok">Internet connected!</string>
    <string name="internet_error">Internet Error</string>
    <string name="get_code">Get Code</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Logout</string>
    <string name="verify_phone_number">Verify Phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_cc">+233</string>
    <string name="select_country_code">Select country code</string>
    <string name="phone_number_not_valid">Phone number not valid</string>
    <string name="continue_with">Continue with</string>
    <string name="or">or</string>
    <string name="find_my_account">Find my account</string>
    <string name="country_prefix">Country Prefix</string>
    <string name="country_with_account">Continue with account</string>
    <string name="search">Search</string>
    <string name="my_address">My Addresses</string>
    <string name="enter_the_4_digit_code_sent_to_you">Enter The 4-Digit Code Sent To You</string>
    <string name="emergency_line">Emergency Line</string>
    <string name="recording_audio">Recording Audio</string>
    <string name="label_continue">Continue</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="terms_and_privacy_text">
        By pressing Continue you agree to  <u><a href="https://tevioapp.com/company/terms-and-condition"> <font color="#FF6700">terms &amp; conditions</font></a></u>
    </string>
    <string name="allow_gps_permission">Allow gps permission</string>
    <string name="request_location_permission_msg">Location permission is required</string>
    <string name="request_mic_permission_msg">Mic permission is required</string>
    <string name="okay">Okay</string>
    <string name="skip">Skip</string>
    <string name="otp_invalid">OTP invalid</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_time">Select Time</string>
    <string name="picker_today">Today</string>
    <string name="picker_am">AM</string>
    <string name="picker_pm">PM</string>
    <string name="personal_info">Personal Info</string>
    <string name="let_us_know_how_to_properly_address_you">Let Us know how to properly address you</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="hint_email">email@example.com</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_contacts_1">E-Contact 1</string>
    <string name="emergency_contacts_2">E-Contact 2</string>
    <string name="optional">Optional</string>
    <string name="payout_method">Payout Method</string>
    <string name="payment_details">Payment Details</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="code">Code</string>
    <string name="verify_bank_details">Verify Bank Details</string>
    <string name="identity_proof">Identity Proof</string>
    <string name="select_your_type_of_identity_card">Select Your type of Identity card</string>
    <string name="national_id">National ID</string>
    <string name="other">Other</string>
    <string name="please_add_missing_images">Please add missing images</string>
    <string name="drivers_license">Driver’s License</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="select_a_type">Select a type</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="license_plate">License Plate</string>
    <string name="motor_insurance_card">Motor Insurance Card</string>
    <string name="motor_insurance_expiry_date">Motor Insurance Expiry Date</string>
    <string name="motor_insurance_expiry">Motor Insurance Expiry</string>
    <string name="motor_insurance_no">Motor Insurance Number</string>
    <string name="motor_insurance">Motor Insurance</string>
    <string name="vehicle_fitness">Vehicle Fitness</string>
    <string name="skip_this_step_and_continue_later">Skip this step and continue later</string>
    <string name="profile">Profile</string>
    <string name="work_settings">Work Settings</string>
    <string name="order_delivery_kit">Order Delivery Kit</string>
    <string name="become_a_delivery_partner">Become A Delivery Partner</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="upload_id_and_bank_details">Upload ID and Bank Details</string>
    <string name="start_now">Start Now</string>
    <string name="tell_us_more_about">Tell Us More about your\nworking preferences</string>
    <string name="enjoy_your_benefits">Enjoy your benefits</string>
    <string name="completed">Completed</string>
    <string name="how_to_take_a_photo">How To Take A Photo</string>
    <string name="follow_these_steps_to_capture_a_clear_image">Follow these steps to capture a clear image</string>
    <string name="hold_your_phone_steady">Hold your phone steady</string>
    <string name="align_your_face_within_the_frame">Align Your Face Within The Frame</string>
    <string name="tap_the_capture_button_to_take_the_selfie">Tap The Capture Button To Take The Selfie</string>
    <string name="dashboard">Dashboard</string>
    <string name="order_activity">Order Activity</string>
    <string name="wallet">Wallet</string>
    <string name="notification">Notifications</string>
    <string name="safety">Safety</string>
    <string name="select_the_orders">Select The Orders You Would Like To Deliver</string>
    <string name="selection_date">Your selection will be for 30 days. You can change your preferences after that.</string>
    <string name="food_grocery_packages">Food, Grocery &amp; Packages</string>
    <string name="package_delivery">Package Delivery</string>
    <string name="all_package_delivery_orders_nearby">All package delivery orders nearby</string>
    <string name="all_orders_in_nearby_areas">All orders in nearby areas</string>
    <string name="joining_bonus">Joining Bonus of up to ₵600</string>
    <string name="learn_more">Learn More</string>
    <string name="best_for_you">Best For You</string>
    <string name="select_your_preferred_timings">Select Your Preferred Work Timings</string>
    <string name="full_time_all_days">Full Time | All Days</string>
    <string name="full_time_weekends">Full time | Weekends only</string>
    <string name="six_days_a_week">6 days a week</string>
    <string name="fri_sat_sun">Fri, Sat &amp; Sun</string>
    <string name="earnings">Up to ₵ 600 weekly earnings</string>
    <string name="title_earning">Earning</string>
    <string name="joining_benefits">Joining Benefits</string>
    <string name="no_record">No record</string>
    <string name="unlock_happens_after_one_order">Unlock happens after 1 order</string>
    <string name="reserve_your_t_shirt">Reserve Your T-Shirt</string>
    <string name="get_started_by">Get Started by</string>
    <string name="order_your_delivery_kit">Order Your Delivery Kit</string>
    <string name="select_t_shirt_size">Select T-shirt size</string>
    <string name="select_your_size">Select your size</string>
    <string name="address_to_deliver">Address To Deliver Your Delivery Kit</string>
    <string name="building_locality_name">Building/Locality Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="resume_delivery_kit">Resume Delivery Kit</string>
    <string name="done">Done!</string>
    <string name="free">Free</string>
    <string name="change_size">Change Size</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="submit">Submit</string>
    <string name="edit_address">Edit Address</string>
    <string name="welcome_message">Welcome to Tevio! A team member will be in touch with you within the next few days.</string>
    <string name="go_to_training_videos">Go to Training Videos</string>
    <string name="close">Close</string>
    <string name="congratulations">Congratulations!</string>
    <string name="search_for_area_street_name">Search for area, street name…</string>
    <string name="search_another_location">Search Another Location</string>
    <string name="please_wait">Please Wait</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="onboarding">Onboarding</string>
    <string name="training_videos">Training Videos</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="next_video_training">Next Video Training</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_front">Add Front</string>
    <string name="add_back">Add Back</string>
    <string name="tap_to_upload">Tap to Upload</string>
    <string name="campaigns">Campaigns</string>
    <string name="tickets">Tickets</string>
    <string name="rewards">Rewards</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Mode</string>
    <string name="system_default">System Default</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="type_payment_method">Type of Payment Method</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="app_preferences">App Preferences</string>
    <string name="language">Language</string>
    <string name="all">All</string>
    <string name="target_desc"><b>Target:</b>>Complete a set number of deliveries during peak hours</string>
    <string name="peak_hour_completion_bonus">Peak-Hour Completion Bonus</string>
    <string name="empty_field">Empty field</string>
    <string name="invalid_email">Email invalid</string>
    <string name="select_gender">Select gender</string>
    <string name="select">Select</string>
    <string name="select_date">Select Date</string>
    <string name="mobile_money_network">Mobile Money Network</string>
    <string name="mobile_money_name">Mobile Money Name</string>
    <string name="mobile_money_number">Mobile Money Number</string>
    <string name="payout_details">Payout Details</string>
    <string name="got_it">Got it</string>
    <string name="enable_extra_security">Enable Extra Security</string>
    <string name="message_security">Use biometric authentication and a photo ID for quicker, safer access.</string>
    <string name="message_security_desc">This will make your login faster and more secure.</string>
    <string name="enable_now">Enable Now</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="let_s_snap_a_selfie">Let’s snap a selfie!</string>
</resources>